# FlowCalibration

./: README.md
FlowCalibrationV2.0/FlowCalibration/: FCMainWindow.cpp  FCMainWindow.h  FCMainWindow.ui  FCOperationFlowmeter.cpp  FCOperationFlowmeter.h  FCOperationFlowmeter.ui  FCParameter.cpp  FCParameter.cpp.autosave  FCParameter.h  FCParameter.ui  FCRecordEvent.cpp  FCRecordEvent.h  FCRecordEvent.ui  FlowCalibration.pro  main.cpp  resources.qrc
FlowCalibrationV2.0/build-FlowCalibration-Desktop_Qt_5_10_0_MSVC2013_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_FCMainWindow.h
FlowCalibrationV2.0/build-FlowCalibration-Desktop_Qt_5_10_0_MSVC2013_64bit-Debug/debug/: moc_FCMainWindow.cpp
FlowCalibrationV2.0/build-FlowCalibration-Desktop_Qt_5_10_0_MinGW_32bit-Debug/: .qmake.stash  FlowCalibration_resource.rc  Makefile  Makefile.Debug  Makefile.Release  object_script.FlowCalibration.Debug  object_script.FlowCalibration.Release  ui_FCMainWindow.h  ui_FCOperationFlowmeter.h  ui_FCParameter.h  ui_FCRecordEvent.h
FlowCalibrationV2.0/build-FlowCalibration-Desktop_Qt_5_12_6_MinGW_32_bit-Release/: .qmake.stash  FlowCalibration_resource.rc  Makefile  Makefile.Debug  Makefile.Release  object_script.FlowCalibration.Release  ui_FCMainWindow.h  ui_FCOperationFlowmeter.h  ui_FCParameter.h  ui_FCRecordEvent.h
Socket/: CMakeLists.txt  Net.c  Queue.c  ReadConfig.c
SocketServer/: ReadMe.txt  main.c
VST20191127/: Mythread.c  Mythread.h  Net.h  Queue.h  ReadConfig.h  main.c  makefile  timer.c  timer.h
(+12 files in other folders)
